build/readiness-app/objects/inContactException__c.object
<CustomObject>
    <label>inContactErrorLog</label>
    <nameField>
        <label>inContactException Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>inContactErrorLog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>isError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportId__c</fullName>
        <label>ReportId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isError__c</columns>
        <columns>ReportId__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>